--- a/scss/3.layout/_news.scss
+++ b/scss/3.layout/_news.scss
@@ -149,6 +149,7 @@
 
     h3 {
         font-size: 16px;
+        min-height: 48px;
     }
 
     p {
